created user pages

--- a/src/assets/views/user/register.html
+++ b/src/assets/views/user/register.html
@@ -9,15 +9,15 @@
 
   <meta charset="UTF-8">
   <title>User Register</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
 
 
   <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
 
-  <link href="../css/style.css" rel="stylesheet"/>
+  <link href="../../css/style.css" rel="stylesheet"/>
 </head>
 
-<body>
+<body class="dk-top-padding">
 <div class="container">
   <h1>Register</h1>
   <input placeholder="username"
