--- a/src/assets/views/user/login.html
+++ b/src/assets/views/user/login.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Meta tags for making website for mobile-->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
-
-
-  <meta charset="UTF-8">
-  <title>User Login</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-
-
-  <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
-
-  <!--<link href="../css/style.css" rel="stylesheet"/>-->
+    <!-- Meta tags for making website for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
+    <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../../css/style.css"/>
+    <title>User Login</title>
 </head>
 
 
-<body>
-<div class="container">
-  <h1>Login</h1>
-  <input placeholder="username"
-         type="text"
-         class="form-control"/>
-  <input placeholder="password"
-         type="password"
-         class="form-control"/>
-  <a class="btn btn-primary btn-block" href="profile.html" >Login</a>
-  <a class="btn btn-success btn-block" href="register.html" >Register</a>
-
+<body class="dk-top-padding">
+<div class="login container">
+    <h1>Login</h1>
+    <input type="text" class="form-control" placeholder="username"/>
+    <input type="password" class="form-control" placeholder="password"/>
+    <a class="btn btn-primary btn-block" href="profile.html">Login</a>
+    <a class="btn btn-success btn-block" href="register.html">Register</a>
 </div>
 </body>
 </html>
