--- a/src/assets/views/user/profile.html
+++ b/src/assets/views/user/profile.html
@@ -16,18 +16,12 @@
 
     <link href="../../css/style.css" rel="stylesheet"/>
 </head>
-
 <body>
-
-<nav class="navbar bg-primary">
+<nav class="navbar navbar-fixed-top bg-primary square nav">
     <div class="container-fluid">
-
-        <!--heading on the nav bar-->
         <a class="navbar-brand thick bg-primary" href="profile.html">
             <b>Profile</b>
         </a>
-
-        <!--tick mark-->
         <p class="navbar-text pull-right">
             <a href="profile.html" class="navbar-link bg-primary">
                 <span class="glyphicon glyphicon-ok"></span>
@@ -36,29 +30,7 @@
 
     </div>
 </nav>
-
-<!--<nav class="navbar navbar-default navbar-fixed-top">-->
-<!--<div class="container-fluid">-->
-
-<!--&lt;!&ndash;heading on the nav bar&ndash;&gt;-->
-<!--<p class="navbar-header pull-left">-->
-<!--<a class="navbar-brand thick">-->
-<!--<b>Profile</b>-->
-<!--</a>-->
-<!--</p>-->
-
-<!--&lt;!&ndash;tick mark&ndash;&gt;-->
-<!--<p class="navbar-text pull-right">-->
-<!--<a href="profile.html" class="navbar-link">-->
-<!--<span class="glyphicon glyphicon-ok"></span>-->
-<!--</a>-->
-<!--</p>-->
-
-<!--</div>-->
-<!--</nav>-->
-
-
-<div class="container">
+<div class="container dk-fixed-bottom-navbar-padding dk-fixed-top-navbar-padding">
     <form>
         <div class="form-group">
             <label for="username">Username</label>
@@ -90,20 +62,15 @@
        href="../website/website-list.html">Websites</a>
     <a class="btn btn-danger btn-block "
        href="login.html" >Logout</a>
-
 </div>
-
-<!-- Footer -->
-<nav class="navbar navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-fixed-bottom square bg-primary">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
             <a href="profile.html">
-                <span class="glyphicon glyphicon-user"></span>
+                <span class="glyphicon glyphicon-user bg-primary"></span>
             </a>
         </p>
-
     </div>
 </nav>
-
 </body>
 </html>
