--- a/src/assets/views/website/website-list.html
+++ b/src/assets/views/website/website-list.html
@@ -18,34 +18,34 @@
         </a>
     </div>
 </nav>
-<div class="container dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
+<div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
     <ul class="list-group">
-        <li class="list-group-item text-primary">
-            <div class="container row">
+        <li class="list-group-item text-primary dk-borderless">
+            <div class="container-fluid row">
                 <a href="../page/page-list.html" class="col-xs-11"> Address Book App </a>
                 <a href="website-edit.html" class="col-xs-1">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </div>
         </li>
-        <li class="list-group-item text-primary">
-            <div class="container row">
+        <li class="list-group-item text-primary dk-borderless">
+            <div class="container-fluid row">
                 <a href="../page/page-list.html" class="col-xs-11"> Blogger </a>
                 <a href="website-edit.html" class="col-xs-1">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </div>
         </li>
-        <li class="list-group-item text-primary">
-            <div class="container row">
+        <li class="list-group-item text-primary dk-borderless">
+            <div class="container-fluid row">
                 <a href="../page/page-list.html" class="col-xs-11"> Blogging App </a>
                 <a href="website-edit.html" class="col-xs-1">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </div>
         </li>
-        <li class="list-group-item text-primary">
-            <div class="container row">
+        <li class="list-group-item text-primary dk-borderless">
+            <div class="container-fluid row">
                 <a href="../page/page-list.html" class="col-xs-11"> Script Testing App </a>
                 <a href="website-edit.html" class="col-xs-1">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
