--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -28,7 +28,7 @@
             </a>
         </div>
     </nav>
-    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-4">
+    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-4 hidden-xs hidden-sm">
         <ul class="list-group">
             <li class="list-group-item text-primary dk-borderless">
                 <div class="container-fluid row">
