resolved spacing issues

--- a/src/assets/views/user/login.html
+++ b/src/assets/views/user/login.html
@@ -14,10 +14,12 @@
 <body class="dk-top-padding">
 <div class="login container">
     <h1>Login</h1>
-    <input type="text" class="form-control" placeholder="username"/>
-    <input type="password" class="form-control" placeholder="password"/>
-    <a class="btn btn-primary btn-block" href="profile.html">Login</a>
-    <a class="btn btn-success btn-block" href="register.html">Register</a>
+    <form>
+        <input type="text" class="form-control dk-lower-margin" placeholder="username"/>
+        <input type="password" class="form-control dk-lower-margin" placeholder="password"/>
+        <a class="btn btn-primary btn-block" href="profile.html">Login</a>
+        <a class="btn btn-success btn-block" href="register.html">Register</a>
+    </form>
 </div>
 </body>
 </html>
