--- a/src/assets/views/user/register.html
+++ b/src/assets/views/user/register.html
@@ -20,19 +20,11 @@
 <body class="dk-top-padding">
 <div class="container">
   <h1>Register</h1>
-  <input placeholder="username"
-         type="text"
-         class="form-control"/>
-  <input placeholder="password"
-         type="password"
-         class="form-control"/>
-  <input placeholder="verify password"
-         type="password"
-         class="form-control"/>
-  <a class="btn btn-primary btn-block"
-     href="profile.html">Register</a>
-  <a class="btn btn-danger btn-block"
-     href="login.html" >Cancel</a>
+  <input placeholder="username" type="text" class="form-control dk-lower-margin"/>
+  <input placeholder="password" type="password" class="form-control dk-lower-margin"/>
+  <input placeholder="verify password" type="password" class="form-control dk-lower-margin"/>
+  <a class="btn btn-primary btn-block" href="profile.html">Register</a>
+  <a class="btn btn-danger btn-block" href="login.html" >Cancel</a>
 
 </div>
 </body>
