--- a/src/assets/views/user/profile.html
+++ b/src/assets/views/user/profile.html
@@ -22,12 +22,9 @@
         <a class="navbar-brand thick bg-primary" href="profile.html">
             <b>Profile</b>
         </a>
-        <p class="navbar-text pull-right">
-            <a href="profile.html" class="navbar-link bg-primary">
-                <span class="glyphicon glyphicon-ok"></span>
-            </a>
-        </p>
-
+        <a href="profile.html" class="navbar-brand bg-primary pull-right">
+            <span class="glyphicon glyphicon-ok"></span>
+        </a>
     </div>
 </nav>
 <div class="container dk-fixed-bottom-navbar-padding dk-fixed-top-navbar-padding">
@@ -65,11 +62,9 @@
 </div>
 <nav class="navbar navbar-fixed-bottom square bg-primary">
     <div class="container-fluid">
-        <p class="navbar-text pull-right">
-            <a href="profile.html">
-                <span class="glyphicon glyphicon-user bg-primary"></span>
-            </a>
-        </p>
+        <a href="profile.html">
+            <span class="navbar-brand glyphicon glyphicon-user pull-right bg-primary"></span>
+        </a>
     </div>
 </nav>
 </body>
