--- a/src/assets/views/page/page-new.html
+++ b/src/assets/views/page/page-new.html
@@ -2,9 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../css/style.css" rel="stylesheet"/>
+    <title>Page New</title>
 </head>
 <body>
+<div class="container-fluid">
+    <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
+        <div class="container-fluid col-md-4 hidden-xs hidden-sm">
+            <a href="../website/website-list.html" class="navbar-brand">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <p class="dk-no-margin navbar-brand">Pages</p>
+            <a href="../page/page-new.html" class="navbar-brand pull-right">
+                <span class="glyphicon glyphicon-plus"></span>
+            </a>
+        </div>
+    </nav>
+    <div class="container-fluid dk-no-side-padding col-md-4 hidden-xs hidden-sm dk-fixed-top-navbar-padding
+                dk-fixed-bottom-navbar-padding">
 
+        <ul class="list-group">
+            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
+                    <a href="../page/page-list.html"> Address Book App </a>
+                    <a href="website-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+            </li>
+            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
+                    <a href="../page/page-list.html"> Blogger </a>
+                    <a href="website-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+            </li>
+            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../page/page-list.html"> Blogging App </a>
+                    <a href="website-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../page/page-list.html"> Script Testing App </a>
+                    <a href="website-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="container-fluid dk-no-side-padding">
+
+    </div>
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <a href="../user/profile.html" class="navbar-brand pull-right">
+            <span class="glyphicon glyphicon-user text-primary"></span>
+        </a>
+    </nav>
+</div>
 </body>
 </html>
