--- a/src/assets/views/page/page-list.html
+++ b/src/assets/views/page/page-list.html
@@ -21,32 +21,40 @@
         <ul class="list-group">
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html" class="col-xs-11"> Address Book App </a>
-                    <a href="website-edit.html" class="col-xs-1">
+                    <a href="../page/page-list.html" class="col-xs-11"> Blog Posts </a>
+                    <a href="page-edit.html" class="col-xs-1">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html" class="col-xs-11"> Blogger </a>
-                    <a href="website-edit.html" class="col-xs-1">
+                    <a href="../page/page-list.html" class="col-xs-11"> Blog </a>
+                    <a href="page-edit.html" class="col-xs-1">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html" class="col-xs-11"> Blogging App </a>
-                    <a href="website-edit.html" class="col-xs-1">
+                    <a href="../page/page-list.html" class="col-xs-11"> Home </a>
+                    <a href="page-edit.html" class="col-xs-1">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html" class="col-xs-11"> Script Testing App </a>
-                    <a href="website-edit.html" class="col-xs-1">
+                    <a href="../page/page-list.html" class="col-xs-11"> About </a>
+                    <a href="page-edit.html" class="col-xs-1">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../page/page-list.html" class="col-xs-11"> Contact Us </a>
+                    <a href="page-edit.html" class="col-xs-1">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
