--- a/src/assets/views/page/page-new.html
+++ b/src/assets/views/page/page-new.html
@@ -8,54 +8,82 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
-        <div class="container-fluid col-md-4 hidden-xs hidden-sm">
-            <a href="../website/website-list.html" class="navbar-brand">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid hidden-xs hidden-sm col-md-4">
+            <a href="../user/profile.html" class="navbar-brand bg-secondary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
-            <p class="dk-no-margin navbar-brand">Pages</p>
-            <a href="../page/page-new.html" class="navbar-brand pull-right">
+            <p class="navbar-brand text-center dk-no-margin"> Page </p>
+            <a href="../user/profile.html" class="navbar-brand bg-secondary pull-right">
                 <span class="glyphicon glyphicon-plus"></span>
             </a>
         </div>
+        <div>
+            <a class="navbar-brand" href="page-list.html">
+                <span class="glyphicon glyphicon-remove bg-secondary"></span>
+            </a>
+            <p class="navbar-brand text-center dk-no-margin"> New Page </p>
+            <a class="navbar-brand pull-right" href="page-list.html">
+                <span class="glyphicon glyphicon-ok bg-secondary text-right"></span>
+            </a>
+        </div>
     </nav>
-    <div class="container-fluid dk-no-side-padding col-md-4 hidden-xs hidden-sm dk-fixed-top-navbar-padding
-                dk-fixed-bottom-navbar-padding">
 
+
+    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-4 hidden-xs hidden-sm">
         <ul class="list-group">
-            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                    <a href="../page/page-list.html"> Address Book App </a>
-                    <a href="website-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-            </li>
-            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                    <a href="../page/page-list.html"> Blogger </a>
-                    <a href="website-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-            </li>
-            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
+            <li class="list-group-item text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html"> Blogging App </a>
-                    <a href="website-edit.html">
+                    <a href="../page/page-list.html"> Blog Posts </a>
+                    <a href="page-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </li>
-            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
+            <li class="list-group-item text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html"> Script Testing App </a>
-                    <a href="website-edit.html">
+                    <a href="../page/page-list.html"> Blog </a>
+                    <a href="page-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../page/page-list.html"> Home </a>
+                    <a href="page-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../page/page-list.html"> About </a>
+                    <a href="page-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../page/page-list.html"> Contact Us </a>
+                    <a href="page-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
             </li>
         </ul>
     </div>
-    <div class="container-fluid dk-no-side-padding">
 
+    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-8">
+        <form class="form-group">
+            <label for="page-name"> Name </label>
+            <input class="form-control dk-lower-margin" id="page-name" placeholder="Page Name">
+            <label for="page-title"> Description </label>
+            <input class="form-control dk-lower-margin" id="page-title" placeholder="Page Title">
+        </form>
     </div>
+
     <nav class="navbar navbar-default navbar-fixed-bottom">
         <a href="../user/profile.html" class="navbar-brand pull-right">
             <span class="glyphicon glyphicon-user text-primary"></span>
