started widget pages

--- a/src/assets/views/widget/widget-choose.html
+++ b/src/assets/views/widget/widget-choose.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Choose Widget</title>
+    <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
-
+<div class="container-fluid">
+    <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
+        <div class="container-fluid">
+            <a class="bg-secondary navbar-brand" href="../user/profile.html">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <b class="navbar-brand"> Choose Widget </b>
+            <a class="bg-secondary pull-right navbar-brand" href="website-new.html">
+                <span class="glyphicon glyphicon-plus"></span>
+            </a>
+        </div>
+    </nav>
+    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
+        <ul class="list-group row">
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> Header </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> Label </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> HTML </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> Input Text </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> Link </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> Button </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> Image </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> YouTube </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> Data Table </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <a href="../page/page-list.html"> Repeater </a>
+            </li>
+        </ul>
+    </div>
+    <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
+        <a href="../user/profile.html" class="navbar-brand pull-right">
+            <span class="glyphicon glyphicon-user"></span>
+        </a>
+    </nav>
+</div>
 </body>
 </html>
