--- a/src/assets/views/page/page-edit.html
+++ b/src/assets/views/page/page-edit.html
@@ -2,9 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Page Edit</title>
+    <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../../css/style.css"/>
 </head>
 <body>
-
+<div class="container-fluid">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid hidden-xs hidden-sm col-md-4">
+            <a href="../user/profile.html" class="navbar-brand bg-secondary">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <p class="navbar-brand text-center dk-no-margin"> Page </p>
+            <a href="../user/profile.html" class="navbar-brand bg-secondary pull-right">
+                <span class="glyphicon glyphicon-plus"></span>
+            </a>
+        </div>
+        <div>
+            <a class="navbar-brand" href="page-list.html">
+                <span class="glyphicon glyphicon-remove bg-secondary"></span>
+            </a>
+            <p class="navbar-brand text-center dk-no-margin"> Edit Page </p>
+            <a class="navbar-brand pull-right" href="page-list.html">
+                <span class="glyphicon glyphicon-ok bg-secondary text-right"></span>
+            </a>
+        </div>
+    </nav>
+    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-4 hidden-xs hidden-sm">
+        <ul class="list-group">
+            <li class="list-group-item text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../widget/widget-list.html"> Blog Posts </a>
+                    <a href="page-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../widget/widget-list.html"> Blog </a>
+                    <a href="page-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../widget/widget-list.html"> Home </a>
+                    <a href="page-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../widget/widget-list.html"> About </a>
+                    <a href="page-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item text-primary dk-borderless">
+                <div class="container-fluid row">
+                    <a href="../widget/widget-list.html"> Contact Us </a>
+                    <a href="page-edit.html">
+                        <span class="pull-right glyphicon glyphicon-cog"></span>
+                    </a>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-8">
+        <form class="form-group">
+            <label for="page-name"> Name </label>
+            <input class="form-control dk-lower-margin" id="page-name" value="Lorem Ipsum" placeholder="Page name">
+            <label for="page-desc"> Description </label>
+            <input class="form-control dk-fixed-width dk-lower-margin" id="page-desc" placeholder="Page title"
+                   value="Lorem ipsum dolor sit amet">
+            <a href="#" class="btn btn-block btn-danger bottom "> Delete </a>
+        </form>
+    </div>
+    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
+        <div class="container-fluid col-xs-1 col-xs-offset-11">
+            <a href="../user/profile.html">
+                <span class="navbar-brand pull-right bg-secondary glyphicon glyphicon-user"></span>
+            </a>
+        </div>
+    </nav>
+</div>
 </body>
 </html>
