--- a/src/assets/views/widget/widget-heading.html
+++ b/src/assets/views/widget/widget-heading.html
@@ -13,7 +13,7 @@
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
         <b class="navbar-brand"> Edit Widget </b>
-        <a class="bg-secondary pull-right navbar-brand" href="website-new.html">
+        <a class="bg-secondary pull-right navbar-brand" href="widget-list.html">
             <span class="glyphicon glyphicon-ok"></span>
         </a>
     </div>
