--- a/src/assets/views/page/page-edit.html
+++ b/src/assets/views/page/page-edit.html
@@ -79,7 +79,7 @@
             <label for="page-desc"> Description </label>
             <input class="form-control dk-fixed-width dk-lower-margin" id="page-desc" placeholder="Page title"
                    value="Lorem ipsum dolor sit amet">
-            <a href="#" class="btn btn-block btn-danger bottom "> Delete </a>
+            <a href="page-list.html" class="btn btn-block btn-danger bottom"> Delete </a>
         </form>
     </div>
     <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
