--- a/src/assets/views/user/profile.html
+++ b/src/assets/views/user/profile.html
@@ -2,18 +2,9 @@
 <html lang="en">
 <head>
     <!-- Meta tags for making website for mobile-->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
-
-
     <meta charset="UTF-8">
     <title>User Profile</title>
     <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-
-
-    <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
-
     <link href="../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -22,7 +13,7 @@
         <a class="navbar-brand thick bg-primary" href="profile.html">
             <b>Profile</b>
         </a>
-        <a href="profile.html" class="navbar-brand bg-primary pull-right">
+        <a class="navbar-brand bg-primary pull-right" href="profile.html">
             <span class="glyphicon glyphicon-ok"></span>
         </a>
     </div>
