--- a/src/assets/views/website/website-edit.html
+++ b/src/assets/views/website/website-edit.html
@@ -69,10 +69,10 @@
             <label for="website-name"> Name </label>
             <input class="form-control dk-lower-margin" id="website-name" value="Lorem Ipsum">
             <label for="website-desc"> Description </label>
-            <textarea class="form-control dk-fixed-width dk-lower-margin" id="website-desc">
+            <textarea class="form-control dk-fixed-width dk-lower-margin" rows="3" id="website-desc">
 Lorem ipsum dolor sit amet,consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et....
         </textarea>
-            <a href="#" class="btn btn-block btn-danger bottom "> Delete </a>
+            <a href="website-list.html" class="btn btn-block btn-danger bottom "> Delete </a>
         </form>
     </div>
     <nav class="navbar navbar-fixed-bottom bg-primary">
