--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -69,7 +69,7 @@
             <label for="website-name"> Name </label>
             <input class="form-control dk-lower-margin" id="website-name" placeholder="Name of the website">
             <label for="website-desc"> Description </label>
-            <textarea class="form-control dk-fixed-width dk-lower-margin" id="website-desc"
+            <textarea class="form-control dk-fixed-width dk-lower-margin" rows="3" id="website-desc"
                       placeholder="Some description about your website"></textarea>
         </form>
     </div>
