--- a/src/assets/views/widget/widget-choose.html
+++ b/src/assets/views/widget/widget-choose.html
@@ -10,7 +10,7 @@
 <div class="container-fluid">
     <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
         <div class="container-fluid">
-            <a class="bg-secondary navbar-brand" href="../user/profile.html">
+            <a class="bg-secondary navbar-brand" href="widget-list.html">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
             <b class="navbar-brand"> Choose Widget </b>
