--- a/src/assets/views/page/page-list.html
+++ b/src/assets/views/page/page-list.html
@@ -13,7 +13,7 @@
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
         <p class="dk-no-margin navbar-brand">Pages</p>
-        <a href="../page/page-new.html" class="navbar-brand pull-right">
+        <a href="page-new.html" class="navbar-brand pull-right">
             <span class="glyphicon glyphicon-plus"></span>
         </a>
     </nav>
@@ -21,7 +21,7 @@
         <ul class="list-group">
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html" class="col-xs-11"> Blog Posts </a>
+                    <a href="../widget/widget-list.html" class="col-xs-11"> Blog Posts </a>
                     <a href="page-edit.html" class="col-xs-1">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
@@ -29,7 +29,7 @@
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html" class="col-xs-11"> Blog </a>
+                    <a href="../widget/widget-list.html" class="col-xs-11"> Blog </a>
                     <a href="page-edit.html" class="col-xs-1">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
@@ -37,7 +37,7 @@
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html" class="col-xs-11"> Home </a>
+                    <a href="../widget/widget-list.html" class="col-xs-11"> Home </a>
                     <a href="page-edit.html" class="col-xs-1">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
@@ -45,7 +45,7 @@
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html" class="col-xs-11"> About </a>
+                    <a href="../widget/widget-list.html" class="col-xs-11"> About </a>
                     <a href="page-edit.html" class="col-xs-1">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
@@ -53,7 +53,7 @@
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html" class="col-xs-11"> Contact Us </a>
+                    <a href="../widget/widget-list.html" class="col-xs-11"> Contact Us </a>
                     <a href="page-edit.html" class="col-xs-1">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
