--- a/src/assets/views/page/page-new.html
+++ b/src/assets/views/page/page-new.html
@@ -34,7 +34,7 @@
         <ul class="list-group">
             <li class="list-group-item text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html"> Blog Posts </a>
+                    <a href="../widget/widget-list.html"> Blog Posts </a>
                     <a href="page-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
@@ -42,7 +42,7 @@
             </li>
             <li class="list-group-item text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html"> Blog </a>
+                    <a href="../widget/widget-list.html"> Blog </a>
                     <a href="page-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
@@ -50,7 +50,7 @@
             </li>
             <li class="list-group-item text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html"> Home </a>
+                    <a href="../widget/widget-list.html"> Home </a>
                     <a href="page-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
@@ -58,7 +58,7 @@
             </li>
             <li class="list-group-item text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html"> About </a>
+                    <a href="../widget/widget-list.html"> About </a>
                     <a href="page-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
@@ -66,7 +66,7 @@
             </li>
             <li class="list-group-item text-primary dk-borderless">
                 <div class="container-fluid row">
-                    <a href="../page/page-list.html"> Contact Us </a>
+                    <a href="../widget/widget-list.html"> Contact Us </a>
                     <a href="page-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
                     </a>
