--- a/src/assets/views/widget/widget-heading.html
+++ b/src/assets/views/widget/widget-heading.html
@@ -9,8 +9,8 @@
 <body>
 <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
     <div class="container-fluid">
-        <a class="bg-secondary navbar-brand" href="../user/profile.html">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+        <a class="bg-secondary navbar-brand" href="widget-list.html">
+            <span class="glyphicon glyphicon-remove"></span>
         </a>
         <b class="navbar-brand"> Edit Widget </b>
         <a class="bg-secondary pull-right navbar-brand" href="widget-list.html">
@@ -27,7 +27,7 @@
         <label for="widget-size"> Size </label>
         <input class = "form-control dk-lower-margin" type="number" id="widget-size" placeholder="0" min="0"
                data-bind="value:replyNumber"/>
-        <a href="widget-choose.html" class="btn btn-danger form-control">Delete</a>
+        <a href="widget-list.html" class="btn btn-danger form-control">Delete</a>
     </form>
 </div>
 <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
