--- a/src/assets/views/widget/widget-list.html
+++ b/src/assets/views/widget/widget-list.html
@@ -19,17 +19,13 @@
     </div>
 </nav>
 
-
-
-
-
 <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
     <div class="col-xs-12">
         <h1>
             Lorem ipsum
         </h1>
         <div class="pull-right dk-widget-toolbar">
-            <a href="#" class="custom-widget">
+            <a href="widget-heading.html" class="custom-widget">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <a href="#" class="custom-widget">
@@ -40,7 +36,7 @@
     <div class="col-xs-12">
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor</h3>
         <div class="pull-right dk-widget-toolbar">
-            <a href="#" class="custom-widget">
+            <a href="widget-heading.html" class="custom-widget">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <a href="#" class="custom-widget">
@@ -51,7 +47,7 @@
     <div class="col-xs-12">
         <img class="img-responsive center-block" src="http://lorempixel.com/1920/1080/">
         <div class="pull-right dk-widget-toolbar">
-            <a href="#" class="custom-widget">
+            <a href="widget-image.html" class="custom-widget">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <a href="#" class="custom-widget">
@@ -65,7 +61,7 @@
             e magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </h4>
         <div class="pull-right dk-widget-toolbar">
-            <a href="#" class="custom-widget">
+            <a href="widget-heading.html" class="custom-widget">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <a href="#" class="custom-widget">
@@ -76,7 +72,7 @@
     <div class="col-xs-12">
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
         <div class="pull-right dk-widget-toolbar">
-            <a href="#" class="custom-widget">
+            <a href="widget-heading.html" class="custom-widget">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <a href="#" class="custom-widget">
@@ -89,7 +85,7 @@
                 allowfullscreen>
         </iframe>
         <div class="pull-right dk-widget-toolbar">
-            <a href="#" class="custom-widget">
+            <a href="widget-youtube.html" class="custom-widget">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <a href="#" class="custom-widget">
@@ -103,7 +99,7 @@
             e magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </h4>
         <div class="pull-right dk-widget-toolbar">
-            <a href="#" class="custom-widget">
+            <a href="widget-heading.html" class="custom-widget">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <a href="#" class="custom-widget">
@@ -112,11 +108,6 @@
         </div>
     </div>
 </div>
-
-
-
-
-
 <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
     <a href="#" class="navbar-brand">
         <span class="glyphicon glyphicon-play"></span>
