--- a/src/assets/views/widget/widget-youtube.html
+++ b/src/assets/views/widget/widget-youtube.html
@@ -10,8 +10,8 @@
 <body>
 <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
     <div class="container-fluid">
-        <a class="bg-secondary navbar-brand" href="../user/profile.html">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+        <a class="bg-secondary navbar-brand" href="widget-list.html.html">
+            <span class="glyphicon glyphicon-remove"></span>
         </a>
         <b class="navbar-brand"> Edit Widget </b>
         <a class="bg-secondary pull-right navbar-brand" href="widget-lsit.html">
@@ -33,7 +33,7 @@
                    min="0" max="100"/>
             <span class="input-group-addon">%</span>
         </div>
-        <a href="widget-choose.html" class="btn btn-danger form-control">Delete</a>
+        <a href="widget-list.html.html" class="btn btn-danger form-control">Delete</a>
     </form>
 </div>
 <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
