--- a/src/assets/views/page/page-list.html
+++ b/src/assets/views/page/page-list.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
     <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/style.css"/>
@@ -17,47 +20,37 @@
             <span class="glyphicon glyphicon-plus"></span>
         </a>
     </nav>
-    <div class="container-fluid dk-no-padding dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
+    <div class="container-fluid col-xs-12 dk-no-padding dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
         <ul class="list-group">
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html" class="col-xs-11"> Blog Posts </a>
-                    <a href="page-edit.html" class="col-xs-1">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
+                <a href="../widget/widget-list.html"> Blog Posts </a>
+                <a href="page-edit.html">
+                    <span class="pull-right glyphicon glyphicon-cog"></span>
+                </a>
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html" class="col-xs-11"> Blog </a>
-                    <a href="page-edit.html" class="col-xs-1">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
+                <a href="../widget/widget-list.html"> Blog </a>
+                <a href="page-edit.html">
+                    <span class="pull-right glyphicon glyphicon-cog"></span>
+                </a>
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html" class="col-xs-11"> Home </a>
-                    <a href="page-edit.html" class="col-xs-1">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
+                <a href="../widget/widget-list.html"> Home </a>
+                <a href="page-edit.html">
+                    <span class="pull-right glyphicon glyphicon-cog"></span>
+                </a>
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html" class="col-xs-11"> About </a>
-                    <a href="page-edit.html" class="col-xs-1">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
+                <a href="../widget/widget-list.html"> About </a>
+                <a href="page-edit.html">
+                    <span class="pull-right glyphicon glyphicon-cog"></span>
+                </a>
             </li>
             <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html" class="col-xs-11"> Contact Us </a>
-                    <a href="page-edit.html" class="col-xs-1">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
+                <a href="../widget/widget-list.html"> Contact Us </a>
+                <a href="page-edit.html">
+                    <span class="pull-right glyphicon glyphicon-cog"></span>
+                </a>
             </li>
         </ul>
     </div>
