"page" pages dones

--- a/src/assets/views/page/page-edit.html
+++ b/src/assets/views/page/page-edit.html
@@ -5,20 +5,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
     <meta charset="UTF-8">
-    <title>Page Edit</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/style.css"/>
+    <title>Page Edit</title>
 </head>
 <body>
 <div class="container-fluid">
-    /*Top navigation bar*/
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="hidden-xs hidden-sm col-md-4">
-            <a href="../user/profile.html" class="navbar-brand bg-secondary">
+            <a href="../website/website-list.html" class="navbar-brand bg-secondary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
             <p class="navbar-brand text-center dk-no-margin"> Page </p>
-            <a href="../user/profile.html" class="navbar-brand bg-secondary pull-right">
+            <a href="page-new.html" class="navbar-brand bg-secondary pull-right">
                 <span class="glyphicon glyphicon-plus"></span>
             </a>
         </div>
@@ -33,10 +32,9 @@
         </div>
     </nav>
 
-    /*Middle content*/
     <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
         <div class="col-md-4 hidden-xs hidden-sm">
-            <ul class="container-fluid list-group">
+            <ul class="list-group">
                 <li class="list-group-item text-primary dk-borderless">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> Blog Posts </a>
