--- a/src/assets/views/page/page-new.html
+++ b/src/assets/views/page/page-new.html
@@ -5,7 +5,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="../../css/style.css" rel="stylesheet"/>
     <title>Page New</title>
@@ -13,7 +12,7 @@
 <body>
 <div class="container-fluid">
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid hidden-xs hidden-sm col-md-4">
+        <div class="hidden-xs hidden-sm col-md-4">
             <a href="../user/profile.html" class="navbar-brand bg-secondary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
@@ -33,59 +32,60 @@
         </div>
     </nav>
 
+    <div class="dk-fixed-bottom-navbar-padding dk-fixed-top-navbar-padding">
+        <div class="col-md-4 hidden-xs hidden-sm">
+            <ul class="list-group">
+                <li class="list-group-item text-primary dk-borderless">
+                    <div class="row dk-li-right-margin">
+                        <a href="../widget/widget-list.html"> Blog Posts </a>
+                        <a href="page-edit.html">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+                <li class="list-group-item text-primary dk-borderless">
+                    <div class="row dk-li-right-margin">
+                        <a href="../widget/widget-list.html"> Blog </a>
+                        <a href="page-edit.html">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+                <li class="list-group-item text-primary dk-borderless">
+                    <div class="row dk-li-right-margin">
+                        <a href="../widget/widget-list.html"> Home </a>
+                        <a href="page-edit.html">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+                <li class="list-group-item text-primary dk-borderless">
+                    <div class="row dk-li-right-margin">
+                        <a href="../widget/widget-list.html"> About </a>
+                        <a href="page-edit.html">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+                <li class="list-group-item text-primary dk-borderless">
+                    <div class="row dk-li-right-margin">
+                        <a href="../widget/widget-list.html"> Contact Us </a>
+                        <a href="page-edit.html">
+                            <span class="pull-right glyphicon glyphicon-cog"></span>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
 
-    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-4 hidden-xs hidden-sm">
-        <ul class="list-group">
-            <li class="list-group-item text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html"> Blog Posts </a>
-                    <a href="page-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
-            </li>
-            <li class="list-group-item text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html"> Blog </a>
-                    <a href="page-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
-            </li>
-            <li class="list-group-item text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html"> Home </a>
-                    <a href="page-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
-            </li>
-            <li class="list-group-item text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html"> About </a>
-                    <a href="page-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
-            </li>
-            <li class="list-group-item text-primary dk-borderless">
-                <div class="container-fluid row">
-                    <a href="../widget/widget-list.html"> Contact Us </a>
-                    <a href="page-edit.html">
-                        <span class="pull-right glyphicon glyphicon-cog"></span>
-                    </a>
-                </div>
-            </li>
-        </ul>
-    </div>
-
-    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-8">
-        <form class="form-group">
-            <label for="page-name"> Name </label>
-            <input class="form-control dk-lower-margin" id="page-name" placeholder="Page Name">
-            <label for="page-title"> Description </label>
-            <input class="form-control dk-lower-margin" id="page-title" placeholder="Page Title">
-        </form>
+        <div class="col-md-8">
+            <form class="form-group row">
+                <label for="page-name"> Name </label>
+                <input class="form-control dk-lower-margin" id="page-name" placeholder="Page Name">
+                <label for="page-title"> Description </label>
+                <input class="form-control dk-lower-margin" id="page-title" placeholder="Page Title">
+            </form>
+        </div>
     </div>
 
     <nav class="navbar navbar-default navbar-fixed-bottom">
