--- a/src/assets/views/page/page-edit.html
+++ b/src/assets/views/page/page-edit.html
@@ -16,7 +16,7 @@
             <a href="../website/website-list.html" class="navbar-brand bg-secondary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"> Page </p>
+            <p class="navbar-brand text-center dk-no-margin"> Pages </p>
             <a href="page-new.html" class="navbar-brand bg-secondary pull-right">
                 <span class="glyphicon glyphicon-plus"></span>
             </a>
