--- a/src/assets/views/page/page-list.html
+++ b/src/assets/views/page/page-list.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
+    <nav class="navbar navbar-default navbar-fixed-top bg-secondary col-xs-12">
         <a href="../website/website-list.html" class="navbar-brand">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
@@ -20,34 +20,34 @@
             <span class="glyphicon glyphicon-plus"></span>
         </a>
     </nav>
-    <div class="container-fluid col-xs-12 dk-no-padding dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
+    <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
         <ul class="list-group">
-            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <a href="../widget/widget-list.html"> Blog Posts </a>
+            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+                <a href="../widget/widget-list.html" class="col-xs-11"> Blog Posts </a>
+                    <a href="page-edit.html">
+                    <span class="pull-right glyphicon glyphicon-cog"></span>
+                </a>
+            </li>
+            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+                <a href="../widget/widget-list.html" class="col-xs-11"> Blog </a>
                 <a href="page-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <a href="../widget/widget-list.html"> Blog </a>
+            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+                <a href="../widget/widget-list.html" class="col-xs-11"> Home </a>
                 <a href="page-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <a href="../widget/widget-list.html"> Home </a>
+            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+                <a href="../widget/widget-list.html" class="col-xs-11"> About </a>
                 <a href="page-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <a href="../widget/widget-list.html"> About </a>
-                <a href="page-edit.html">
-                    <span class="pull-right glyphicon glyphicon-cog"></span>
-                </a>
-            </li>
-            <li class="list-group-item dk-no-side-padding text-primary dk-borderless">
-                <a href="../widget/widget-list.html"> Contact Us </a>
+            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+                <a href="../widget/widget-list.html" class="col-xs-11"> Contact Us </a>
                 <a href="page-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
