--- a/src/assets/views/user/profile.html
+++ b/src/assets/views/user/profile.html
@@ -13,9 +13,7 @@
 <body>
 <nav class="navbar navbar-fixed-top bg-primary square nav">
     <div class="container-fluid">
-        <a class="navbar-brand thick bg-primary" href="profile.html">
-            <b>Profile</b>
-        </a>
+        <p class="dk-no-margin navbar-brand"><b>Profile</b></p>
         <a class="navbar-brand bg-primary pull-right" href="profile.html">
             <span class="glyphicon glyphicon-ok"></span>
         </a>
