--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
     <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/style.css"/>
@@ -13,7 +16,7 @@
             <a href="../user/profile.html" class="navbar-brand bg-primary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"> Website </p>
+            <p class="navbar-brand text-center dk-no-margin"><b>Website</b></p>
             <a href="../user/profile.html" class="navbar-brand bg-primary pull-right">
                 <span class="glyphicon glyphicon-plus"></span>
             </a>
@@ -22,16 +25,17 @@
             <a class="navbar-brand" href="website-list.html">
                 <span class="glyphicon glyphicon-remove bg-primary"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"> New Website </p>
+            <p class="navbar-brand text-center dk-no-margin"><b>New Website</b></p>
             <a class="navbar-brand pull-right" href="website-list.html">
                 <span class="glyphicon glyphicon-ok bg-primary text-right"></span>
             </a>
         </div>
     </nav>
-    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-4 hidden-xs hidden-sm">
+    <div class="dk-fixed-bottom-navbar-padding dk-fixed-top-navbar-padding">
+    <div class="col-md-4 hidden-xs hidden-sm">
         <ul class="list-group">
             <li class="list-group-item text-primary dk-borderless">
-                <div class="container-fluid row">
+                <div class="row dk-li-right-margin">
                     <a href="../page/page-list.html"> Address Book App </a>
                     <a href="website-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
@@ -39,7 +43,7 @@
                 </div>
             </li>
             <li class="list-group-item text-primary dk-borderless">
-                <div class="container-fluid row">
+                <div class="row dk-li-right-margin">
                     <a href="../page/page-list.html"> Blogger </a>
                     <a href="website-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
@@ -47,7 +51,7 @@
                 </div>
             </li>
             <li class="list-group-item text-primary dk-borderless">
-                <div class="container-fluid row">
+                <div class="row dk-li-right-margin">
                     <a href="../page/page-list.html"> Blogging App </a>
                     <a href="website-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
@@ -55,7 +59,7 @@
                 </div>
             </li>
             <li class="list-group-item text-primary dk-borderless">
-                <div class="container-fluid row">
+                <div class="row dk-li-right-margin">
                     <a href="../page/page-list.html"> Script Testing App </a>
                     <a href="website-edit.html">
                         <span class="pull-right glyphicon glyphicon-cog"></span>
@@ -64,14 +68,15 @@
             </li>
         </ul>
     </div>
-    <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-md-8">
-        <form class="form-group">
+    <div class="col-md-8">
+        <form class="form-group row">
             <label for="website-name"> Name </label>
             <input class="form-control dk-lower-margin" id="website-name" placeholder="Name of the website">
             <label for="website-desc"> Description </label>
             <textarea class="form-control dk-fixed-width dk-lower-margin" rows="3" id="website-desc"
                       placeholder="Some description about your website"></textarea>
         </form>
+    </div>
     </div>
     <nav class="navbar navbar-fixed-bottom bg-primary">
         <div class="container-fluid col-xs-1 col-xs-offset-11">
